# eiretes

./: .gitignore  Dockerfile  Dockerfile.local  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  test.yml
eiretes/: __init__.py  models.py  service.py  utils.py
eiretes/eval/: bundle.py  composite.py  config.py  feedback.py  judge.py  models.py  multi_judge.py  pairwise.py  safety_attestation.py
eiretes/eval/calibration/: __init__.py  gate_result.py  json_parse_rate.py  position_bias.py
eiretes/eval/providers/: __init__.py  cost_calc.py  openai_compatible.py  pricing.py  types.py
eiretes/judge/: __init__.py  catalog.py  llm_judge.py
eiretes/judge/rubrics/: general_chat.py  pairwise_general_chat.py
tests/: test_deterministic_fallback.py  test_ensemble_judge.py  test_general_chat_rubric.py  test_judge_service.py  test_pairwise_general_chat_rubric.py
tests/eval/: test_bundle.py  test_composite_multiplicative.py  test_composite_no_sandbagging.py  test_judge_cost_surfacing.py  test_judge_eval_endpoint.py  test_judge_outcome_aliases.py  test_judge_prompt_injection_defense.py  test_per_miner_feedback.py
tests/eval/calibration/: test_judge_json_parse_rate.py  test_pairwise_position_bias.py
tests/eval/providers/: test_cost_calc.py  test_openai_compatible.py
