[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eiretes"
version = "0.2.1"
description = "Reference-based LLM judge service for the EIREL subnet — pairwise / multi-metric / outcome judges plus a multiplicative composite scorer."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eirel>=0.2.0,<1",
    "fastapi~=0.110.1",
    "httpx>=0.28.1,<1",
    "pydantic>=2.12.5,<3",
    "uvicorn>=0.41.0,<0.42",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-asyncio>=1.3.0,<2",
]

[project.scripts]
eiretes-judge-service = "eiretes.service:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["eiretes*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
